--- a/003_Data_Exploration_base_r/explore_base_r.Rmd
+++ b/003_Data_Exploration_base_r/explore_base_r.Rmd
@@ -1,32 +1,37 @@
 ---
-title: "Fish data exploration"
+title: "Data exploration in base R"
 author: "Sean Harrington"
-date: "2/8/2022"
+date: "2022/09/15"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
-knitr::opts_knit$set(root.dir = '~/r4grads')
+knitr::opts_knit$set(root.dir = '~/EDAwithR')
 
 ```
 
 
 ### Exploratory data visualization
 
-So far, we've explored how we can manipulate our data in R, including reading in, subsetting, and merging datasets. These are all very important, but looking at data in the ways we have so far doesn't give us a good intuition for what kind of patterns or distributions there are in the data. Do we have mostly large fish? Mostly small fish? Are the data roughly normally distributed? If you have far better mathematical intuition than I do, you might be able to guess at this from looking at a dataframe in the R console, but I sure can't. Plotting the data gives us a much better idea of what's going on.
+So far, we've explored how we can manipulate our data in R, including reading in, subsetting, and merging datasets. These are all very important, but looking at data in the ways we have so far doesn't give us a good intuition for what kind of patterns or distributions there are in the data. Do we have mostly large fish? Mostly small fish? Are the data roughly normally distributed? If you have far better mathematical intuition than I do, you might be able to guess at this from looking at a dataframe in the R console, but I sure can't. Plotting the data gives us a much better idea of what's going on.  
 
 Here, we'll explore some of the basic plotting functionality in R (i.e., base R graphics). There are much more powerful ways to generate fancier, prettier, publication-quality plots, but base R functionality can provide quick and easy insight into your data.
+
+
+<br>
 
 
 We'll start by reading back in the data that we combined previously.
 
 
 ```{r}
-setwd("~/r4grads")
+setwd("~/EDAwithR")
 data_dir <- "~/r4grads/Fish_data/Modified/"
 fish_dat <- read.csv(paste0(data_dir, "/", "fish_data_merged.csv"))
 ```
+
+<br>
 
 
 ### Relationships among continuous variables
@@ -39,6 +44,9 @@ Let's quickly remind ourselves of the variables that are in our fish dataset:
 colnames(fish_dat)
 ```
 
+<br>
+
+
 We would probably expect a relationship between weight and fork length, since it makes sense that longer fish are probably heavier fish. Let's see what it looks like:
 
 ```{r}
@@ -46,9 +54,28 @@ plot(fish_dat$Fork.length..cm., fish_dat$Weight..g.)
 ```
 
 
-Cool, looks like there's a relationship here. Try plotting out a couple extra variables and see what kinds of relationsips you can identify.
+Cool, looks like there's a relationship here.
 
-Once you do that, let's try cleaning this plot up a bit, it's pretty hideous right now. 
+**Try plotting out a couple extra variables and see what kinds of relationsips you can identify.**
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+Once you do that, let's try cleaning this plot up a bit, it's pretty hideous right now.
 
 ```{r}
 plot(fish_dat$Fork.length..cm., fish_dat$Weight..g.,
@@ -58,8 +85,9 @@ plot(fish_dat$Fork.length..cm., fish_dat$Weight..g.,
 
 There are a number of other graphical parameters you can tweak as you like. There are good resources all over the internet that can be easily found by searching things like "base R axis labels".
 
+<br>
 
-This plot gives us a pretty good idea that there's a correlation between our data, but it looks distinctly non-linear. This isn't surprising, since larger fish don't just get longer, but also wider and taller, so we'd expect the mass to increase more than linearly. This is a good example of when we might want to transform our data. Let's log transform weight and then plot that against fork length.
+This plot gives us a pretty good idea that there's a correlation between our data, but it looks distinctly non-linear. This isn't surprising, since larger fish don't just get longer, but also wider and taller, so we'd expect the mass to increase more than linearly. This is a good example of when we might want to transform our data. Let's log transform weight: and then plot that against fork length.
 
 
 ```{r}
@@ -70,8 +98,28 @@ plot(fish_dat$Fork.length..cm., log_weight,
 
 ```
 
-This looks more linear, but not quite. We generally expect mass and volume to increase with the cube of a linear measure, so let's try out a cube root transform:
+<br>
 
+This looks more linear, but not quite. We generally expect mass and volume to increase with the cube of a linear measure. 
+
+**Cube root transform the data and then plot the cube root against fork length.**
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 ```{r}
 root_weight <- (fish_dat$Weight..g.)^(1/3)
@@ -81,15 +129,20 @@ plot(fish_dat$Fork.length..cm., root_weight,
 
 ```
 
+<br>
+
 This looks very linear now. Let's use an actual statistical test to see if there is a correlation:
 
 ```{r}
 cor.test(fish_dat$Fork.length..cm., root_weight)
 ```
 
-We have a very high correlation coefficient and a very low p value, cool. Remember, however, that we cube root transformed the weight data, so the interpretation is **not** that there is a linear relationship between weight and length. Rather the relationship is a cubic relationship.
+We have a very high correlation coefficient and a very low p value, cool. Remember, however, that we cube root transformed the weight data, so the interpretation is **not** that there is a linear relationship between weight and length. Rather there is a cubic relationship.
 
-Since we have a hypothesis in correlation (being larger causes a fish to be heavier), a linear regression is probably more appropriate here than a correlation test. This also allows us to plot out the regression line on our scatterplot:
+<br>
+<br>
+
+Since we have a hypothesis of causation (being larger causes a fish to be heavier), a linear regression is probably more appropriate here than a correlation test. This also allows us to plot out the regression line on our scatterplot:
 
 ```{r}
 reg <- lm(root_weight ~ fish_dat$Fork.length..cm.)
@@ -102,7 +155,8 @@ abline(reg, col="black")
 Note that here, the order of weight and length in the regression formula is important because we are saying that weight is a function of length (i.e., that length is the predictor/independent variable), not simply asking if there is a correlation.
 
 
-
+<br>
+<br>
 
 
 ### Differences among groups
@@ -128,6 +182,7 @@ hist(dolly_weight, breaks = 60, add = TRUE, col = "red")
 
 ```
 
+<br>
 
 A better way to plot this would be to make the histograms partially transparent. We won't explore that here, but as for most things in R, there are plenty of resources on the internet: https://stackoverflow.com/questions/3541713/how-to-plot-two-histograms-together-in-r
 
@@ -142,7 +197,9 @@ boxplot(Weight..g. ~ Species, data = fish_dat, main="Fish weights",
 
 This looks ok. There is a lot more customization we could do with this, but again, we won't get into that here. The `par()` function sets graphical parameters, and we used it to set the margins `mar()` so that the bottom margin is wider than the default to accommodate the vertical labels. You can find more info here: https://www.r-bloggers.com/2010/06/setting-graph-margins-in-r-using-the-par-function-and-lots-of-cow-milk/
 
-Let's write this plot out to pdf. You *can* save plots directly from RStudio using some GUI options, but the quality is not as good as plotting to a pdf or other image format using `pdf()`, `png()`, etc.I personally prefer pdf format because it is vector-based and maintains resolution under infinite zoom. We use the function `pdf()` to open a pdf plotting device, then plot like normal, but now everything being plotted goes to the pdf file that is open for writing. When we're done, we use `dev.off()` to turn off and close the active plotting device, leaving us with our completed pdf file.
+<br>
+
+Let's write this plot out to pdf. You *can* save plots directly from RStudio using some GUI options, but the quality is not as good as plotting to a pdf or other image format using `pdf()`, `png()`, etc. I personally prefer pdf format because it is vector-based and maintains resolution under infinite zoom. We use the function `pdf()` to open a pdf plotting device, then plot like normal, but now everything being plotted goes to the pdf file that is open for writing. When we're done, we use `dev.off()` to turn off and close the active plotting device, leaving us with our completed pdf file.
 
 ```{r}
 pdf(file=paste0(data_dir, "/", "boplot.pdf"), width=6, height=5)
@@ -155,17 +212,59 @@ dev.off()
 
 We can see here that it looks like we have some major differences in body sizes across the different fish species. Let's test that out using ANOVA. 
 
+**There are various ways to run ANOVAs in R, one is using the `aov()` function. This function is structured similarly to the `lm()` and `boxplot()` functions. Try using `?aov()` to figure out how to run an ANOVA that will tell us if body weights differe among species.** You might need to search the internet for how to specify formulas in R.
+
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
 ```{r}
 res.aov <- aov(Weight..g. ~ Species, data = fish_dat)
 summary(res.aov)
 ```
 
+<br>
 
 Looks like we have some some highly significant differences among the species here. ANOVA itself won't tell us what is different from what, though, so let's run a quick Tukey post-hoc test.
 
 ```{r}
 TukeyHSD(res.aov)
 ```
+
+<br>
+
+
 
 Keep in mind that ANOVA carries assumptions like equal variance among groups and normality that may be violated in this data. When running any test with such assumptions, you should be eplicitly testing that your data conform to them. If your data do not meet the test's assumptions, your results may be biased, and so data transformation or the use of a non-parametric test that does not carry the same assumptions may be a better alternative. You can find more detail on testing ANOVA assumptions and ANOVA alternatives in R here: http://www.sthda.com/english/wiki/one-way-anova-test-in-r
 
